--- a/shared/business/examples/業務委託.md
+++ b/shared/business/examples/業務委託.md
@@ -1,2 +1,41 @@
+## 業務委託のポイント
+
+- 間接契約よりも直接契約（仲介ありよりも仲介なし）
+- 単発契約よりも継続契約
+- 小さな安い案件よりも大きな高い案件
+- 実績を作る
+- 請負よりも委任、準委任
+
+## 仲介サービスやエージェントについて
+
+メリット:
+
+- 実績や人脈がなくても仕事を獲得できる
+- 営業に時間を取られない
+- 確定申告を手伝ってくれるところもある
+
+デメリット:
+
+- 仲介料を取られ続ける
+- クライアントとの関係が自分の資産にならない（直接契約に発展しない）
+
+エージェントを挟んだ間接契約だと仲介料を取られ続けるのがネック。
+
+ある程度貯金ができて、自分で営業する意欲と仕事の実績があるなら、できれば使わない方がいい。
+
+## クラウドソーシングについて
+
+ランサーズ、クラウドワークス、ココナラ、などのネット上の下請け仲介サービスはクラウドソーシングと呼ばれる。
+
+クラウドソーシングはあくまでも社会的信用や実績を得るための入り口として使うべき。
+下請け自体の単価が安いのに仲介を挟むと手数料でさらに安くなるし、競争も激しい。
+
+## その他
+
 システム開発など業務委託の問題点は、バグとか問い合わせがあった時に追加で作業時間がかかること。
 まぁ、それも含めて考えないといけないから、正社員でないなら倍の相場って考えがあるのかも。
+
+クラウドソーシングなどで数万円くらいの小さな案件を取り続けて大きく稼ぐのは難しい。
+派遣みたいに委任の3ヶ月契約を更新していくと少し安定するけど、仲介サービスを使うと結局手数料が2割くらいはかかってしまう。
+
+業務委託は結局派遣労働者と変わらないので、請負よりは委任の方が安全。無駄に責任を負うのはコスパが悪い。
