--- a/shared/business/starting/ビジネスを始める.md
+++ b/shared/business/starting/ビジネスを始める.md
@@ -46,3 +46,10 @@ https://youtube.com/watch?v=lEixj4MSNAo&si=LHL_AcQ90Wnk9lpn
 
 平均点のビジネスは誰にも刺さらない。
 誰でも80点をつけるようなサービスではなく、ごく一部が100点をつけるサービスを目指す。
+
+とりあえず最低賃金で6時間働けば、2025年の東京で7356円。
+これは月に15日働いて約11万円になる計算。
+
+- どのようなスキルを持っているか
+- どのようなスキルを身につけられるか
+- 持っているスキルを活かせないか
