--- a/shared/finance/tips/収入を増やす.md
+++ b/shared/finance/tips/収入を増やす.md
@@ -1,4 +1,7 @@
 - 資産を増やす
+- 仲介よりも直接営業
+- コネを使って仕事を得る
+- 顧客が自分から買いに来るようにする
 
 利益を追求するなら貯蓄は二の次。貯蓄が目的になってはいけない。
 ただ、活動を安定して続けるために、ある程度の貯蓄は必要。
@@ -11,3 +14,6 @@
 安く買って高く売るには、育てるのが確実。
 
 勝率50%が51%になるだけで十分に利益が出ることって結構ある。その辺りがAIとか推測の狙い目かも。
+
+なんでも自分で直接仕事した方が効率はいいけど、限界がある。
+効率と売上のバランス。
