--- a/shared/thinking/topics/一般的な問い.md
+++ b/shared/thinking/topics/一般的な問い.md
@@ -1,6 +1,6 @@
-- どうして？（なぜ？）
+- どうして？ (Why?)
 - どうなる？
-- どうやって？
+- どうやって？ (How?)
 - 何が？
 - 何を？
 - 誰が？
@@ -10,5 +10,8 @@
 - どんな？
 - どれ？
 - どれくらい？
-- いくつ？
+- いくつ？ (How many?)
+- いくら？ (How much?)
 - 〜といえば？
+- 真か？ (Truth?)
+- 偽か？ (False?)
