--- a/shared/thinking/tips/深く考える.md
+++ b/shared/thinking/tips/深く考える.md
@@ -24,5 +24,12 @@
 - 具体的には？
 - その時何を考えていたか
 
-- もしも
-- たとえば
+- つまり、どういうこと？
+- どう感じたか
+- どう思ったか
+- それからどうなった？
+- 大切なのは？
+
+- どこが同じか
+- どこが似ているか
+- どこが違うか
