--- a/shared/communication/media/language/言葉.md
+++ b/shared/communication/media/language/言葉.md
@@ -27,3 +27,17 @@
 言葉はとにかくもっと具体的にできないか考える。
 
 外向的なものだけじゃなく、内向的にも言葉を使う。
+
+「言葉は単なる情報の伝達手段ではなく、それ自体が『行動』である」（言語行為論の概念）
+
+- 発話行為: 音声を出し、文法的に意味のある文を作る
+- 発話内行為: 発話を通じて、何を行おうとしているか、という意図
+- 発話外行為: その言葉が相手に与えた影響
+
+ジョン・サールの発話内行為の分類:
+
+- 断定 (Assertives): 事態がどうかを述べる（「今日は晴れだ」とか）
+- 指令 (Directives): 相手に何かをさせようとする（「これを読んで」とか）
+- 約束 (Commissives): 自分が何かすることを約束する（「明日伺います」とか）
+- 表出 (Expressives): 自分の心理状態を表す（「ありがとう」「すみません」とか）
+- 宣言 (Declarations): 社会的な状態を宣言する（「開会します」「二人が夫婦であることを認めます」とか）
