--- a/shared/communication/コミュニケーションの成功.md
+++ b/shared/communication/コミュニケーションの成功.md
@@ -24,3 +24,6 @@
 もし客観的にはリスクを軽減するものでも、主観的には不安を煽るなら受け入れられないことが多い。
 
 コミュニケーションは誰かを動かして出力や間接的な利益を得るために行う。好きなものを好きになってほしいとか、儲けたいとか、利益はさまざま。相手が動かないならコミュニケーションはうまく行ってない。
+
+コミュニケーションの成否は、発話内行為、つまり、意図が正しく伝わったかどうかで決まる。
+例えば「窓を閉めてほしい」という意図で相手が「窓を閉める」という行為をするかどうか。そのためにどういう言葉を発するべきか。
