--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -314,3 +314,6 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 ユーモアの基礎には愛がある。
 
 目の前で起きていることを滑稽話にするのがユーモア。失敗を滑稽なものにする。笑いに変える。
+
+語用論の協調の公理をあえて破ることで、皮肉やユーモアを生み出すことができる。
+「このドレス、太って見える？」「あ、今日のご飯美味しいね」というと「太って見えると言いづらい」という含意が伝わる。
