--- a/shared/respect/尊重.md
+++ b/shared/respect/尊重.md
@@ -404,3 +404,8 @@ https://x.com/ggnka_icha/status/1810274912759918858
 自分で自分を舐めている、自己肯定感がない人は、他人からも舐められやすい。
 
 畏怖よりも興味と尊敬を持って吸収する。
+
+まず、面子＝自己イメージを尊重する。
+
+- ポジティブ・ポライトネス（親近感の追求）：相手の意向を汲み、親しみを表現する。例：「この服、素敵ですね」。
+- ネガティブ・ポライトネス（距離の保持）：相手の負担を減らす、丁寧な距離感を保つ。例：「恐れ入りますが、こちらをご覧ください」。
