--- a/shared/people/appearance/tips/身なりの印象を変える.md
+++ b/shared/people/appearance/tips/身なりの印象を変える.md
@@ -1,6 +1,4 @@
-## 男性的
-
-## 女性的
+## 男性的・女性的
 
 - フォーマルにすると女性的になる
 - 化粧すると女性的になる
@@ -8,3 +6,31 @@
 - 顔が幼いと女性的になる
 
 そもそも身なりにこだわること自体が女性的という面もある。
+
+## ハード・ソフト
+
+男性的、女性的とも近い。
+
+- ハード: 強い、硬い、かっこいい、男性的、直線的
+- ソフト: 弱い、柔らかい、かわいい、女性的、曲線的
+
+強面なら、装いにはソフトな要素を混ぜてバランスを取る。
+
+- 明るいトーンはソフトになる
+- 暗いトーンはハードになる
+- 角ばっているとハードになる
+  - オールバックや角刈りはハードになる
+  - パーマにするとソフトになる
+- 眉を直線的にするとハードになる
+- 毛素材を使うとソフトになる
+- 角のないメガネをかけるとソフトになる
+- 濃い色のフレームはハードになる
+- 笑うとソフトになる
+- VネックよりもUネックのほうがソフトになる
+
+ソフトな印象の色:
+
+- ネイビー
+- チャコールグレー
+- ベージュ
+- ホワイト
