--- a/shared/people/appearance/身なり.md
+++ b/shared/people/appearance/身なり.md
@@ -16,3 +16,30 @@
 身なりは「似合っている」のが一番オシャレ。全体の総合力。
 
 身なりはまず状況に合わせて、相手に合わせるのが基本。葬式にパンクロックとか、相手は普通の服なのに自分だけ原宿系とかはダサい。
+
+- 全体のバランス
+  - 形（シルエット）
+  - 色
+  - テクスチャ
+- 組み合わせのバランス
+  - フォーマル（ドレス）とカジュアル
+  - サイズ感
+- コンテキスト
+  - TPO
+    - 時間
+    - 場所
+    - 場合
+  - トレンド、時代性
+  - 季節感
+- パーソナリティ
+  - パーソナルカラー
+  - 骨格
+  - ライフスタイル
+  - アイコン
+
+どれだけ身なりを整えても、「視線は顔に集中する」という大原則がある。
+顔、というか顔周りが5割以上。なんなら7割と考えたほうがいい。
+顔、髪、顔の近くにくる部分（首元や襟、肩）が特に重要。
+
+- ハード（男顔、強面、筋肉）
+- ソフト（女顔、若々しい、子供っぽい）
