--- a/shared/trust/intimacy/清潔感.md
+++ b/shared/trust/intimacy/清潔感.md
@@ -1,3 +1,16 @@
+- 不健康
+  - 肌が乾燥している
+    - 肌がテカっている
+  - 毛穴が目立つ
+    - 毛穴が開いている
+    - 毛穴が詰まっている
+    - 皮膚がたるんでいる
+  - 髪が乾燥している
+  - 髪が伸びている
+  - 顔の部品が歪んでいる
+    - 形が悪い（縦のバランスが悪い）
+    - 左右対称になっていない（横のバランスが悪い）
+
 掃除と服装は清潔感を与える意味で似ている。衛生に関連する。
 
 清潔な髪と肌と服があれば、最低限身だしなみには気を遣ってるように見える。
@@ -26,3 +39,5 @@ https://x.com/womanhumour/status/1819723107973873958
 
 「清潔感がない」とか、「生理的に無理」っていうのは「抱かれたくない」ってこと。
 まぁ、特にひどい場合は接触がなくても病気をうつされそうだから死んでほしいって意味だけど、そこまではなかなかいない。
+
+肌のテカリも実は乾燥から来ている。
