--- a/shared/lifestyle/glasses/眼鏡の買い方.md
+++ b/shared/lifestyle/glasses/眼鏡の買い方.md
@@ -2,3 +2,9 @@
 
 市販のメガネで足りなかったら、「明視域計算できますか？」と言って話の通じる眼鏡士を探す。
 https://twitter.com/gintoriko/status/1521778334559989760?s=20
+
+サイズ感:
+
+- 黒目がレンズの横幅に対して真ん中より少し内側にあるのがちょうどいい
+- フレームの上ラインが眉のラインと重なるくらいがちょうどいい
+  - 離れすぎると怪しい印象になりがち
