--- a/shared/lifestyle/clothing/服の系統.md
+++ b/shared/lifestyle/clothing/服の系統.md
@@ -4,6 +4,19 @@
 - 女性的 (ウィメンズ)
 - 中性的
 
+##
+
+- タイト: 細い
+  - 手足を長く見せる
+- ルーズ: 緩い、しわ
+  - 裾が余る
+  - シワがよる
+
+##
+
+- ハード: 男性的、直線的、攻撃的
+- ソフト: 女性的、曲線的
+
 ## 印象による違い
 
 - フォーマル: 儀礼的で上品
