--- a/shared/lifestyle/clothing/examples/鞄.md
+++ b/shared/lifestyle/clothing/examples/鞄.md
@@ -1,4 +1,6 @@
-特徴:
+# Bag
+
+## 鞄の要素
 
 - 形状
 - 大きさ
@@ -14,10 +16,8 @@
   - 手持ち
   - 手提げ（ハンドル）
   - 肩掛け
-    - ワンショルダー
-    - リュックサック
 
-種類:
+## 鞄の種類
 
 - クラッチバッグ（セカンドバッグ）
 - バッグインバッグ
@@ -25,7 +25,7 @@
 - ボディーバッグ
   - ウエストポーチ
 - ハンドバッグ
-- ショルダーバッグ
+- ショルダーバッグ（ワンショルダー）
   - メッセンジャーバッグ
   - トートバッグ
   - ボストンバッグ
@@ -48,13 +48,22 @@
 - キャリーバッグ
 - 巾着袋
 
+## 長持ちするバッグ
+
+素材
+
+- 本革
+-
+
+## その他
+
 最低限、以下の４種類くらいは持っておくと便利。
 仕事にも旅行にも使わないなら上の２種類だけでもいい。
 
-1. 冠婚葬祭にも使えるフォーマルなクラッチバッグやハンドバッグ
+1. 冠婚葬祭にも使えるフォーマルなクラッチバッグやハンドバッグ (友達がいるなら)
 2. 普段使いしやすい中くらいのショルダーバッグやリュックサック
-3. ノート PC や書類を持ち運べるフォーマルなビジネスバッグ
-4. 旅行用の大きなショルダーバッグやキャリーバッグ
+3. ノート PC や書類を持ち運べるフォーマルなビジネスバッグ (仕事で顧客に会うなら)
+4. 旅行用の大きなショルダーバッグやキャリーバッグ (何泊かの旅行をするなら)
 
 クラッチバッグだけだとペットボトルとかコンビニで買ったものとか入らないのでトートバッグとかリュックサックが普段使いしやすい。
 カジュアルだけならボディーバッグもちょうどいい大きさで便利。
