--- a/shared/lifestyle/clothing/織物.md
+++ b/shared/lifestyle/clothing/織物.md
@@ -1,6 +1,59 @@
+# Textile
+
+## 種類
+
 - 三原組織
   - 平織
-  - 綾織・ツイル
-  - 繻子織
-- 四原組織
-  - 絡み織・捩り織・レノ
+    - ガーゼ
+    - ブロード
+    - 帆布（キャンバス）
+    - 魚子織
+      - オックスフォード
+  - 綾織・斜文織（ツイル）
+    - デニム
+    - チノ
+    - フランネル
+    - ツイード
+  - 繻子織・朱子織
+    - サテン
+- その他
+  - 絡み織・捩り織（レノ）
+  - パイル織
+    - タオル
+  - ドビー織
+    - ワッフル
+
+## 平織
+
+経糸と緯糸を交互に浮き沈みさせて織る、最も単純な組織。
+
+- 耐久性が高い
+- 摩擦に強い
+- 裏表に差がない
+
+## 魚子織
+
+経糸と緯糸を2本以上引き揃えた平織。
+
+- 通気性に優れている
+- 粒が大きく凸凹した表面になる
+
+## 綾織
+
+経糸が緯糸を2-3本飛ばして交差する。
+
+- 柔らかく伸縮性に優れる
+- シワになりにくい
+- 光沢が少しある
+- 摩擦に少し弱い
+- 斜めの模様が出る
+
+## 繻子織
+
+経糸と緯糸のどちらかを多く表面に出す。
+平織、綾織、繻子織、と進むにつれて糸を飛ばす数が増えている。
+
+- 綾織よりもさらに柔らかく伸縮性に優れる
+- 光沢が強い
+- 摩擦や引っ掛かりに弱い
+- 裏地の肌触りがいい
