--- a/shared/people/appearance/outfit/tips/装いの予算配分.md
+++ b/shared/people/appearance/outfit/tips/装いの予算配分.md
@@ -1,11 +1,48 @@
-## お金をかけたほうがいい
+## お金をかけるべきもの
+
+- 目立つ
+  - 顔周り、手先、足先
+- 劣化しにくい
+  - 流行り廃りが少ない、トレンドに左右されにくい
+- 差別化しやすい
+- 毎日でも使える
+  - 服でない
+  - 服の系統に左右されにくい
+    - シンプル
+
+## Tier S
+
+- 鞄 (2万円〜): 流行り廃りが少ない、目線が行きやすい
+- 靴 (5万円〜): 流行り廃りが少ない、目線が行きやすい
+
+## Tier A
+
+- ストール・マフラー: 流行り廃りが少ない、小顔効果がある
+- アクセサリー（特に首と手首）: 安っぽいとダサい、そこまで高くない
+
+## Tier B
 
 - アウター
-- バッグ
-- 靴
 
-## お金をかけなくてもいい
+## Tier C
 
-- インナー
-- トップス
-- ボトムス
+- ボトムス: 高くても対して変わらない
+- トップス: 高くても大して変わらない、傷みやすい
+- インナーや靴下: 見えない、傷みやすい
+
+## メモ
+
+外から見えて、長く使えるものを優先する。
+流行り廃りが少なくて、耐久性が高いもの。
+
+https://youtu.be/-VpjWsa0S_8?si=byUBMgnsOVnRQgbx
+https://youtu.be/vXHERYGq5jo?si=LdUUxSWW3eo_fuJ8
+
+古着屋やアウトレットもある。
+安く買えるならそれはそれでいい。
+
+そもそも服全般は優先順位が低い。
+
+https://youtu.be/ydEdMbaV1cY?si=fTMZfNSf80uZApDz
+
+男性は鞄に金をかけないので、良い鞄を持つだけでも差別化しやすい。
