--- a/shared/people/appearance/outfit/tips/装いの予算配分.md
+++ b/shared/people/appearance/outfit/tips/装いの予算配分.md
@@ -12,12 +12,12 @@
 
 ## Tier S
 
-- 鞄 (2万円〜): 流行り廃りが少ない、目線が行きやすい
-- 靴 (1万円〜): 流行り廃りが少ない、目線が行きやすい
+- 鞄 (2万円〜): 劣化しにくい、目立つ
+- 靴 (1万円〜): 劣化しにくい、目立つ
 
 ## Tier A
 
-- ストール・マフラー: 流行り廃りが少ない、小顔効果がある
+- ストール・マフラー: 劣化しにくい、小顔効果がある
 - アクセサリー（特に首と手首）: 安っぽいとダサい、そこまで高くない
 
 ## Tier B
@@ -46,3 +46,5 @@ https://youtu.be/vXHERYGq5jo?si=LdUUxSWW3eo_fuJ8
 https://youtu.be/ydEdMbaV1cY?si=fTMZfNSf80uZApDz
 
 男性は鞄に金をかけないので、良い鞄を持つだけでも差別化しやすい。
+
+アクセサリーは使わない人は別に買わないといけないってわけではない。
