--- a/shared/humor/tips/自虐.md
+++ b/shared/humor/tips/自虐.md
@@ -1,5 +1,12 @@
 # 自虐
 
+- 相手からいじってきたらこっちもいじる
+- 相手が「いじれる」自虐にする
+  - 当たり前すぎてはいけない（自虐になってない）
+  - 重すぎてはいけない
+  - 相手がいじってきたら自分が怒ってしまうことをネタにしない
+- 相手もうっすら思っているけど言わないことを自虐にする
+
 誰もが知っている自虐を言っても面白くない。「まあ、そうだよね…」ってなる。
 自虐は、隠そうとしていることをあえて晒すことで「自分で言うの？」という驚きになる。
 
@@ -18,3 +25,8 @@
 事実通りだったら「あ、うん、そうね」しか言えなくなる。
 
 自虐には「そこまでは言ってない」でいい。
+
+自虐は相手からの「からかい」を誘っている。
+
+良い自虐と悪い自虐がある。
+自虐ネタで笑いが取れる人と取れない人の違い。
