--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -1,6 +1,8 @@
 # Humor
 
-洒落。滑稽。遊び心。茶目っ気。機知。
+洒落。滑稽。遊び心。茶目っ気。機知。おふざけ。
+
+Humorはラテン語の「湿気、体液」から来ていて、「気分」を経て「おかしみ」に繋がっている。
 
 ユーモアの本質は、ネガティブなことをポジティブに解釈、表現すること。特に表現。
 
@@ -317,3 +319,76 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 
 語用論の協調の公理をあえて破ることで、皮肉やユーモアを生み出すことができる。
 「このドレス、太って見える？」「あ、今日のご飯美味しいね」というと「太って見えると言いづらい」という含意が伝わる。
+
+ユーモアに関わる学術分野:
+
+- 心理学: ユーモアの作用や笑いのメカニズム
+- 言語学: 冗談や洒落の構造、言葉遊び
+- 神経科学: ユーモアで笑う時にどの部分が反応するか
+- 社会学・人類学: 文化による違いやユーモアの役割
+- 哲学: 何が面白いのか
+
+複数の分野にまたがっていて複雑な現象であることがわかる。
+
+ユーモアの捉え方:
+
+- 不調和理論: ユーモアは予期しないものや矛盾したものに遭遇したとき、期待から外れて異なる文脈が突然結びつくときに生まれる
+- 優越理論: 他者の失敗や欠点に対する優越感から生まれる
+- 解放理論: 抑圧された感情やエネルギーの解放によって生まれる
+
+そもそも何がユーモアなのか定義するのも難しい。
+
+共通する部分としては、ユーモアは笑いを生じる。ただ、笑いそのものではない。
+
+期待を外す、という考え方で言うと、リズム、タイミング、常識、などを利用する。
+
+チンパンジーやゴリラも遊びの中で仲間をくすぐったり、わざと驚かせたりする。
+
+- からかう
+- くすぐる
+- わざと驚かせる
+  - 大きな音を出す
+  - いないないばあ
+- 嘘をついて周りの反応を楽しむ
+- ものまね
+
+「相手の反応を楽しむ」という面もある。
+ただ、相手の反応を楽しむのは単に社会的な刺激を楽しんでいるだけで、ユーモア以前と考えることもできる。
+
+追いかけっこ、じゃれ合い、ごっこ遊びなどでは、現実とは違う「ふり」の世界を共有し、そこに楽しみを見出す。
+「現実ではないとわかっている非現実」を楽しむ能力は、ユーモアの理解に不可欠。
+
+ものまねなんかは観察力と表現力を必要とする。
+
+認知的な柔軟性、社会的なつながり、遊び心、などの要素がある。
+
+笑う側と笑われる側の相互性。入れ替わりうる関係性がないといじめにつながる。
+
+パンチアップとパンチダウン。
+弱い方が強い方を笑うのは風刺やユーモアとして機能しやすい。一方的な笑いになりにくい。
+
+ユーモアは相手が「やり返してくる」ことを期待しているのかも。
+
+相手をからかうということは、「あなたもやり返せる」「やり返しても関係は壊れない」という信頼関係があってこそ成立する。
+
+平等・対等で相互的な人間関係を構築する。
+
+相手に「やり返してもいい」と思ってもらうための方策:
+
+- 自分から先に自虐ネタを言う
+  - 失敗談を滑稽話にする（自分の過去を笑う）
+  - 弱みを見せる
+- ツッコミを褒める、笑う
+- 「かかってこい」と直接伝える
+- 軽いネタで相手が言い返してくるのを探る
+- 言語的なからかい、身体的なからかい、など相手の得意な方法に合わせる
+- 冗談が滑っても自分でネタにして笑い飛ばす
+
+ユーモアには相互性がある。
+自分が言ったら相手も言っていい、という前提。
+
+相手が本気でそう思っている場合はやり返してくることを期待していない。
+本気の発言には相互性の前提がない。
+
+あえて本気と冗談、本音と建前の境界を曖昧にしている場合もある。
+「もうちょっと連絡してくれてもいいんじゃないのー！？ぷんぷん」みたいに冗談めかしていっているけど本気とか、ただのいじめを「冗談だよ」って誤魔化すとか。
