--- a/shared/humor/tips/ユーモアとエスプリの違い.md
+++ b/shared/humor/tips/ユーモアとエスプリの違い.md
@@ -11,4 +11,9 @@
 「ウィットに富んだ一言」というと、相手からの攻撃に対して同じように攻撃するのではなく、相手がおかしな人のように扱って遠回しに馬鹿にするさまを指す。
 皮肉のように悪意が元というよりは、相手が自分から悪いところに気づけるような振る舞い。ただ、下に見てはいる。
 
+エスプリに限らず、悪意に対してはウィットで返すのが基本。
+自分が馬鹿にされる代わりに、相手を馬鹿にして社会的に殺す。笑いものにする。
+
 [ユーモア - Wikipedia](https://ja.wikipedia.org/wiki/%E3%83%A6%E3%83%BC%E3%83%A2%E3%82%A2)
+
+皮肉は相手との距離を測ろうとしているものではない。
