--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -392,3 +392,10 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 
 あえて本気と冗談、本音と建前の境界を曖昧にしている場合もある。
 「もうちょっと連絡してくれてもいいんじゃないのー！？ぷんぷん」みたいに冗談めかしていっているけど本気とか、ただのいじめを「冗談だよ」って誤魔化すとか。
+
+ユーモアのスタイル:
+
+- 親和的: 場を和ませる
+- 自己高揚的: 困難な状況でも前向きに捉える
+- 攻撃的: 他人を貶める
+- 自虐的: 自分を貶める
