--- a/shared/perception/肯定.md
+++ b/shared/perception/肯定.md
@@ -82,3 +82,8 @@
 肯定の基礎は比較しないこと。
 
 そうなの？は肯定というか驚き。
+
+相手の感じ方や考え方を矮小化してしまうのも否定に近い。
+例えば「上司のセクハラがひどくて」「そうなんだ、他の人にもセクハラしてそうだよね」というのは、相手の問題を一般の問題にしてしまっている。
+まずは相手の問題をしっかり受け止めるのが大事。単に「辛かったね」「それは嫌だよね」でいい。相手の感じ方が間違ってないことを伝える。
+深刻で嫌な記憶の場合、「何をされたの？」「いつやられたの？」などはそれを思い出させる場合もあるので慎重に。「詳しく聞いてもいい？話したくなければもっと楽しい話をしよう」とか探るのもいい。人に話したりノートに書いたりすることでスッキリすることもある。
