--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -399,3 +399,8 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 - 自己高揚的: 困難な状況でも前向きに捉える
 - 攻撃的: 他人を貶める
 - 自虐的: 自分を貶める
+- 防御的: 相手を否定せずに断る
+
+直接的に拒否する（否定する）よりも、肯定的に受け入れつつ条件をつける方が関係性を保ちやすいし、周囲も笑える。
+
+関係性を明らかにするツールでもある。
