--- a/shared/human/being/人生.md
+++ b/shared/human/being/人生.md
@@ -58,3 +58,7 @@ https://x.com/cicada3301_kig/status/1914565545967428076?s=46
 - 完璧主義じゃない（とりあえず一旦早く終わらせる）
 - 試行回数が多い
 - 不安や不満をエネルギーにする
+
+「人生は線ではなく点の連続である。」（アルフレッド・アドラー）
+
+重要なのは「ダンスを踊り終える」ことではなく、「ダンスに集中する」こと。
