--- a/shared/lifestyle/clothing/服の組み合わせ.md
+++ b/shared/lifestyle/clothing/服の組み合わせ.md
@@ -8,3 +8,8 @@
 
 服の色の基本はグラデーション。肌も含めて。
 例えば黒いシャツに白いジャケットだと肌の色とまだらになって中途半端とか。
+
+古着と新品のバランスを取らないといけない。
+古着ばっかりだと汚いおっさんになりがち。
+
+ジャケットは薄いので、鍛えられていて立体的な人じゃないと似合わない。特に胸筋と背筋。
