--- a/shared/management/戦略.md
+++ b/shared/management/戦略.md
@@ -23,3 +23,6 @@ https://twitter.com/ysk_motoyama/status/1693771064961343971?s=20
 リソースを余らせて「楽する」のを戦略とは言えない。
 戦略とは最も効率的で効果的なリソース配分のことだ。
 最高効率のために休息や妥協は必要だが、それだけでは足りない。
+
+戦いに「負ける」ことすらも戦略。
+損が小さい戦場ではあえて「負ける」ことでもっと大きな利益を求めることがある。
