--- a/shared/people/appearance/tips/脚を長く見せる.md
+++ b/shared/people/appearance/tips/脚を長く見せる.md
@@ -1,4 +1,5 @@
-- 厚底の靴
+- 厚底の靴で底上げする
+- 中敷きで底上げする
 - ハイウェスト
   - タックイン
   - 短丈のトップス
@@ -20,3 +21,5 @@ https://youtube.com/shorts/s6Zy3F7Dy-M?si=SMF-7aA73v1uGsDA
 ボトムスは横に広い方が脚長に見えるのはなんでだろう？
 
 タックパンツはハイウエストでタックインする使い方が基本。ベルトで高い位置に留めて、シャツの裾はズボンに入れる。
+
+中敷きとしてはHiCool INSOLEなど。
