--- a/shared/people/appearance/容姿.md
+++ b/shared/people/appearance/容姿.md
@@ -17,3 +17,10 @@
 いきなりおしゃれな服を買おうとしない。
 
 体形は正直見せなくてもなんとかなるけど、体形がいいと作れるシルエットが多い。
+
+根本的に顔が小さくないとスタイルが悪く見える。
+
+- 顔を小さく見せる
+- 脚を長く見せる
+
+スタイルはこの二つが大事。
