--- a/shared/joke/ノリツッコミ.md
+++ b/shared/joke/ノリツッコミ.md
@@ -1,3 +1,8 @@
 自分でボケて自分でツッコミを入れる。
 
 ボケは誰かに拾ってもらわないといけないので、自分で拾っている。
+
+ノリツッコミはそれ自体が笑いを取るものというよりは、誰かにツッコミを入れて欲しいという意思表明の面もあるかも。
+ノリツッコミに対してさらに誰かがツッコミを重ねてくれた方が盛り上がる。
+
+一人で完結するだけだと観客は置いてけぼりにされるし、本人も孤独に見えてしまう。
