--- a/shared/joke/フリとオチ.md
+++ b/shared/joke/フリとオチ.md
@@ -1,3 +1,6 @@
+フリとオチ。
+セットアップとパンチライン。
+
 フリとオチが、ミスディレクションとそれを外す例外パターンの関係になる。
 まずフリで特定のパターンを予想させて、オチであえて外す。これがユーモアの基本。
 
@@ -18,3 +21,42 @@
 
 振りが上手いと次の落ちまでわかる。
 ただ、その通りに来ることもあるし、あえて外すこともある。どっちになってもうまく落ちる。
+
+1. 期待を作る（フリ）
+2. 期待を裏切る（オチ）
+
+の流れが基本的な構造。
+
+- フリ（セットアップ）: 状況や前提を設定し、聞き手に特定の期待を抱かせる部分
+- オチ（パンチライン）: 期待を裏切り、予想外の結末や解釈を提示する部分
+
+- ダブルミーニング: 言葉の多義性を利用する (記者と汽車など)
+- 曲解: 意図的に間違った解釈をする
+- 誇張: 極端に大げさにする
+- 逆転: 期待される展開を逆転させる (家に泥棒が入って荷物が増えた、など)
+- 三段構成: パターンを2回繰り返してリズムを作り、3回目で裏切る
+- コールバック: 以前に出た要素をのちに予想外の形で再登場させる
+- 天丼: 過度に繰り返す
+
+オチの前の沈黙も期待を高める効果がある。
+
+言葉のテンポが期待を作る。
+
+オチは簡潔に、わかりやすく。フリが大事。
+
+関係性、誰が誰に言うかでも意味が変わる。
+聞き手に背景知識を求めることもある。
+
+失敗する要因:
+
+- フリが足りない
+- オチが説明的で長すぎる
+- 意外性がない
+- 文脈が共有されてない
+
+ボケとツッコミは、ボケが常識から外れたことをして、ツッコミがその異常性を指摘する。
+フリとオチとは逆に、むしろ異常なところから正常なところに戻ってくるような笑い。
+
+漫才だと、フリとオチを小さく繰り返して、最後の大オチで締める流れも定番。
+
+フリとオチとは別に、本題に入る前の導入（まくら、つかみ）がある場合もある。特に落語。
