--- a/shared/joke/冗談.md
+++ b/shared/joke/冗談.md
@@ -22,3 +22,11 @@ AIに面白いことを喋らせられるか。
 
 前もって準備したもので笑わせる方がむしろ難しい。
 その場の状況に合わせた、タイミングが合ったジョークの方が笑いやすい。
+
+冗談のスタイル:
+
+- フリとオチ: 正常なフリに対して異常なオチ（予測不能性、意外性）
+- ボケとツッコミ: 異常なボケに対して正常なツッコミ（予測可能性、共感性）
+
+この二つのスタイルは真逆と考えられる。
+でも観客がオチやツッコミを待つ「くるぞくるぞ」という緊張とその解放の構図は近い。
