--- a/shared/joke/ボケとツッコミ.md
+++ b/shared/joke/ボケとツッコミ.md
@@ -17,3 +17,5 @@
 日常会話でボケとツッコミを成立させるのは難しい。フリとオチのスタイルとは違って、基本的に二人いないと成立しない。一応ノリツッコミもあるけど、ちょっと弱い。
 
 誰かがボケたら必ず誰かがツッコミを入れる、という文化は社会参加の証明の面もある。
+
+一発ギャグはツッコミがいるなら異常な振る舞いだけでもいいけど、一人ならフリとオチのスタイルが必要。ショートコントとか。
