--- a/shared/joke/笑い.md
+++ b/shared/joke/笑い.md
@@ -39,3 +39,5 @@
 「そうだね、「お笑い担当」は滑る人だから」
 「そう、がむしゃらにやって滑ってる人が「うちのお笑い担当だから」って言われてるわ」
 https://youtu.be/h4xYHWFCQ3c?si=xkv2bJAwKu9mGL2s
+
+笑いは根本的に、肺から息を吐く動作だ。安堵や安心がないと息は吐けない。
