--- a/shared/lifestyle/clothing/着こなし.md
+++ b/shared/lifestyle/clothing/着こなし.md
@@ -49,3 +49,6 @@ WEAR や ZOZOTOWN で着こなしを観察するのもいい。
 着こなしには意図がある。
 
 頭が大きいなら、厚手のジャケットやパーカーで肩幅を広げるとバランスがいい。
+
+アイテムごとにどういう属性があるのか考えるのも大事。
+でも最後は全体のバランス。
