--- a/shared/love/interesting/興味をひく.md
+++ b/shared/love/interesting/興味をひく.md
@@ -24,3 +24,5 @@
 他人をつまらないと思っているとき、自分も相手からつまらないと思われているのだ。
 
 単純に派手な演出は興味や関心を引く。凝っているとさらに興味を引く。
+
+言いたいことをそのまま言ってしまうとつまらない。言いたいことを婉曲に言うことで「なになに？」となる。
