--- a/shared/people/appearance/outfit/tips/装いの予算配分.md
+++ b/shared/people/appearance/outfit/tips/装いの予算配分.md
@@ -48,3 +48,5 @@ https://youtu.be/ydEdMbaV1cY?si=fTMZfNSf80uZApDz
 男性は鞄に金をかけないので、良い鞄を持つだけでも差別化しやすい。
 
 アクセサリーは使わない人は別に買わないといけないってわけではない。
+
+靴や鞄は単色じゃないと目立ちすぎる。基本は単色。
