--- a/shared/people/appearance/tips/身なりの印象を変える.md
+++ b/shared/people/appearance/tips/身なりの印象を変える.md
@@ -1,11 +1,21 @@
+## フォーマル・カジュアル
+
+- タイトな方がフォーマル
+
 ## 男性的・女性的
 
 - フォーマルにすると女性的になる
 - 化粧すると女性的になる
 - 髪が長いと女性的になる
 - 顔が幼いと女性的になる
+- ひげがあると男性的になる
+- 無彩色の方が男性的
+- 暖色の方が女性的
+- つや、光沢があると女性的
 
 そもそも身なりにこだわること自体が女性的という面もある。
+
+性別の違いは文化によっても変わる。昔のヨーロッパではスカートが男性のものだった。
 
 ## ハード・ソフト
 
@@ -34,3 +44,8 @@
 - チャコールグレー
 - ベージュ
 - ホワイト
+
+## タイト・ルーズ
+
+- タックインした方がタイト
+- ボタンを止めた方がタイト
