--- a/shared/satisfaction/謙虚.md
+++ b/shared/satisfaction/謙虚.md
@@ -24,3 +24,6 @@ https://x.com/kw_mtl/status/1840202583073533972
 
 自分の不足を受け入れるのが謙遜。
 自虐は謙遜ではない。不足していることをおかしなことだと思っている。受け入れていない。
+
+謙虚さは素直さに近い。
+思ってもない謙遜は謙虚ではない。
