--- a/shared/achievement/理想.md
+++ b/shared/achievement/理想.md
@@ -54,3 +54,5 @@
 現代ではちょっとした理想ならだいたい金で買える。
 
 何者かになりたいなら親になればいい。
+
+理想を持ってもその通りになることはまずない。でも進み続ければどこかには辿り着ける。その時「理想と違う」と否定して立ち止まるのか、進んできたことを肯定してまたどこかへ進み続けるのか、は一つの分岐点。
