--- a/shared/coaching/コーチング.md
+++ b/shared/coaching/コーチング.md
@@ -103,3 +103,5 @@ management 的に成功させるというよりは、achievement 的に目標を
 教育や指導はコーチングの手段でしかない。
 
 https://baigie.me/nippo/2024/09/30/managermission_sasaki/
+
+コーチの仕事の一つは、プレイヤーが目標から目を離さなくていいように、それ以外の全てに目を配って代わりの目になること。
