--- a/shared/communication/frameworks/explanation/説明の順序.md
+++ b/shared/communication/frameworks/explanation/説明の順序.md
@@ -1,2 +1,5 @@
 解説でまず重要なのは概念、モデル。どのような要素があって、どのように関連しているか。
 モデルを最初に説明しないと解説で出てくる概念がどう扱われるのかわかりづらい。
+
+視覚的な説明は、基本的に俯瞰からというか遠くから近くにカメラが寄っていくように説明する。
+何かを強調するためにあえて近くから遠くというか、部分から全体に引いていく場合もあるけど、演出として使うくらい。まずは俯瞰から対象に寄っていくイメージで描写する。
