--- a/shared/decision/迷い.md
+++ b/shared/decision/迷い.md
@@ -66,3 +66,5 @@
 誰かが探しに来てくれるなら、動かない方がいい時もある。
 
 結果的に楽しめなくても、学びがあったり、何かの作業が終わったりするならやって良かったと思える。
+
+行動につながらないことで迷ってもなんの意味もない。特に、自分でコントロールできないことは迷ってもしょうがない。判断は行動のためだけのものだ。どうでもいいことにはただ祈ればいい。
