--- a/shared/people/appearance/tips/身なりの印象を変える.md
+++ b/shared/people/appearance/tips/身なりの印象を変える.md
@@ -2,7 +2,26 @@
 
 - タイトな方がフォーマル
 
-## 男性的・女性的
+文化によっても違う。
+
+アウトドア、インドアの区分もある。
+インドアの極地は部屋着。
+フォーマルはあまりアウトドアにはなりにくい。
+
+視覚的な刺激の強さ、ハード、ソフト、の感覚もある。
+
+フォーマル、カジュアルはグラデーションがあって、フォーマルめのほうが誰にでも合いやすい。
+
+## 年齢
+
+- フォーマルな方が大人っぽい
+- 視覚的な刺激が強いと子供っぽい
+  - 派手な装飾は子供っぽいけど、式服などは装飾が多いのに大人っぽいことがある
+- 曲線的でゆったりしたシルエットは子供っぽい
+- 光沢やプリントは子供っぽい
+- 実用的に洗練されていると大人っぽい
+
+## 性別
 
 - フォーマルにすると女性的になる
 - 化粧すると女性的になる
@@ -12,6 +31,7 @@
 - 無彩色の方が男性的
 - 暖色の方が女性的
 - つや、光沢があると女性的
+- 機能的な方が男性的、装飾的な方が女性的
 
 そもそも身なりにこだわること自体が女性的という面もある。
 
