--- a/shared/people/appearance/身なりの優先順位.md
+++ b/shared/people/appearance/身なりの優先順位.md
@@ -1,7 +1,20 @@
 1. 清潔感
+   1. 健康
+      1. 笑顔: 精神的な健康を示す
+      2. 肌を綺麗にする
+   2. 美容
+      1. 髪や眉を整える
 2. サイズ感
+   1. 顔を小さく見せる
+   2. 脚を長く見せる
 3. 色
 4. 形（シルエット）
 5. パーソナリティ
 
 まずは客観的な清潔感を土台として、主観的なこだわりを積み上げるもの。
+
+おしゃれの前に健康や美容。
+髪や眉を整えて、肌をきれいにする。笑顔も大事。清潔感ともいう。
+
+おしゃれやファッションというのは根本的に顔が小さい人のものだ。
+そうでないなら、まず顔を小さく、脚を長く見せる工夫が必要。
