--- a/shared/respect/尊重.md
+++ b/shared/respect/尊重.md
@@ -409,3 +409,5 @@ https://x.com/ggnka_icha/status/1810274912759918858
 
 - ポジティブ・ポライトネス（親近感の追求）：相手の意向を汲み、親しみを表現する。例：「この服、素敵ですね」。
 - ネガティブ・ポライトネス（距離の保持）：相手の負担を減らす、丁寧な距離感を保つ。例：「恐れ入りますが、こちらをご覧ください」。
+
+関心がないと尊重しないことが多い。
