--- a/shared/trust/intimacy/tips/人に好かれる.md
+++ b/shared/trust/intimacy/tips/人に好かれる.md
@@ -95,3 +95,6 @@
 
 助けてあげる人より、助けてもらう人の方が愛される。
 でもこれは感謝を伝えるのが大事。相手のプライドを高める。
+
+内面の良さを知ってもらうには数ヶ月かかると思った方がいい。しかもある程度話すようになってから数ヶ月。
+もっと早く興味を持ってほしかったら外見を磨く。
