--- a/shared/trust/intimacy/清潔感.md
+++ b/shared/trust/intimacy/清潔感.md
@@ -41,3 +41,7 @@ https://x.com/womanhumour/status/1819723107973873958
 まぁ、特にひどい場合は接触がなくても病気をうつされそうだから死んでほしいって意味だけど、そこまではなかなかいない。
 
 肌のテカリも実は乾燥から来ている。
+
+不健康に見えると性的魅力も清潔感もない。
+
+性的魅力と近い。
