--- a/games/shogi/将棋の学び方.md
+++ b/games/shogi/将棋の学び方.md
@@ -43,3 +43,7 @@
 将棋の中盤は駒を集めながら詰められる形を作る。
 
 将棋の序盤は駒を取られないように、自分の玉が詰みにくいように逃げたり囲ったりする。いきなり詰みが見えるなら飛ばしてもいい。
+
+将棋はまず一手詰めを見逃さないところから。
+最低でも五手詰めくらいまでは見逃したくない。
+でもまずは一手詰めを見逃さないところから始めて、対戦を始める。
