--- a/shared/people/appearance/outfit/tips/装いの予算配分.md
+++ b/shared/people/appearance/outfit/tips/装いの予算配分.md
@@ -50,3 +50,6 @@ https://youtu.be/ydEdMbaV1cY?si=fTMZfNSf80uZApDz
 アクセサリーは使わない人は別に買わないといけないってわけではない。
 
 靴や鞄は単色じゃないと目立ちすぎる。基本は単色。
+
+服より鞄と靴を買え。
+服はユニクロでいい。
