--- a/shared/people/人の印象.md
+++ b/shared/people/人の印象.md
@@ -57,6 +57,9 @@
 - 癒される
 - フォーマル / カジュアル
 - 男性的 / 女性的
+- 見た目が良い
+- 声が良い
+- 匂いが良い
 
 ## 一時的なもの
 
@@ -77,3 +80,5 @@
 - しそうなこと
 
 ## その他
+
+人と会うときは目、耳、鼻がよく働いている。良い匂いをまとうのも好感を与えるのに役立つ。
