--- a/shared/sex/dating/tips/恋人を選ぶ.md
+++ b/shared/sex/dating/tips/恋人を選ぶ.md
@@ -82,3 +82,5 @@ https://youtube.com/watch?v=SED4dF1kmZQ&si=YkAXIVfLuSENe9zv
 
 3泊以上の旅行は同棲よりも手軽で本性を見やすい。
 疲れて意識的な気遣いが難しくなるので、習慣的な気遣いを見る。
+
+いい男、いい女というのは、相手のパートナーであることに誇りを持てる人。いい会社も同じ。
