--- a/shared/sex/dating/恋愛.md
+++ b/shared/sex/dating/恋愛.md
@@ -101,3 +101,6 @@
 恋愛は親密さの延長、あるいは信頼の延長にある。
 
 恋愛の期間は相手に合わせたり合わされたりして調整する期間でもある。恋人を育てる。
+
+「何かの間違いで幸せになってほしい」
+https://youtu.be/qAr_3B5W3fg?si=LYJgy8bBey3g-BF2
