--- a/shared/care/友人.md
+++ b/shared/care/友人.md
@@ -259,3 +259,7 @@
 友人は気安くて、お互いに気を遣わなくて、幸せなことや嫌なことを話せて、何も言わなくても秘密を守るから秘密を話せる相手であるべき。
 
 同じくらいの実力の友人と同じゲームとかで高め合えるのは楽しい。
+
+「親友、ですか」
+「親友さぁ。互いが互いのことを気を遣わずに、自由に議論を交わすことができるのだろう？　それを親友と言わずして、何というのだい？」
+『結界師への転生』
