--- a/shared/devotion/情熱.md
+++ b/shared/devotion/情熱.md
@@ -56,3 +56,5 @@ Passive と同じ語源。
 
 情熱を注げるのは、それが特別だからかも。「俺にはこれしかない」と思えるかどうか。
 どんな仕事でもすぐできてしまうと情熱を注ぐまでもない。エネルギーを集中しなくてもできてしまう。
+
+「本気でなく狂気になれ」（サカナクション山口）
