--- a/shared/game/genres/fighting/格闘ゲームのコントローラー.md
+++ b/shared/game/genres/fighting/格闘ゲームのコントローラー.md
@@ -19,3 +19,5 @@
 対してパッドやスティックは物理的に逆方向を同時入力できない。人間的に自然な動きで操作できる。
 
 レバーレスは「弾く」あるいは「引っかく」と呼ばれる、指先でボタンの端を引っかけて一瞬だけ入力する方法をよく使う。
+
+手が小さいとアケコンは不利。手に合ったサイズのパッドの方が向いている場合がある。
