--- a/shared/joke/frameworks/大喜利.md
+++ b/shared/joke/frameworks/大喜利.md
@@ -1,4 +1,18 @@
+# 大喜利
+
 お題に対して、面白い答えを返す形式。
 
 大喜利はあるあるが基本。
 あるあるをベースに、少しずらす。
+
+ただあるあるを言うだけではツッコミどころがない。ないないがあってこそボケになる。
+まずお題の光景を細かく想像して、あるあるを考える。そこにないないを混ぜる。
+
+あるあるだけどニッチすぎてあるあるってなる範囲が狭いとツッコミが入って笑いになる。
+
+まずはちゃんとお題に沿ったものから入る。
+前のボケが溜まってくると、前のボケをいじる形も取れる。
+
+あるあるは想像力が大事。あまりにも知らないことは難しい。一部の要素から一般論を引き出すくらいはできる。
+
+自虐ではなく、赤裸々に体を張る。
