--- a/shared/management/マネージャーの仕事.md
+++ b/shared/management/マネージャーの仕事.md
@@ -1,3 +1,6 @@
+まずは「なんとかする」のがマネージャーの仕事。
+そのために部下を集めたり育てたり動かしたりすることはあるけど、あくまでも手段。
+
 - （自分、顧客や上司の）成功に寄与する
 - 人を維持・活用する
 - 方針を決める（ディレクション）
@@ -29,3 +32,7 @@ https://x.com/yuuuu19860221/status/1815242336831705469
 補佐を置いたりする場合もある。
 
 企業においてマネージャーが行うべきコーチングの方向性としては、まず、部下の給与を上げること。そのために教育して、実績を積ませる。
+
+マネージャーには権限と予算を与えないといけない。部下もマネージャーに集めさせる。一人でやってもいいし、部下と一緒にやってもいい、というのが理想。人員管理という作業ではなく、プロジェクトを任せる。
+
+マネージャーの仕事は戦略とかビジョンとかじゃなくて、なんとかすること。ただ、大きな問題を扱うためには仲間が必要。戦略やビジョンを明確にして部下に助けてもらう必要がある。一人でなんとかなるなら要らない。
