--- a/shared/people/人との関係.md
+++ b/shared/people/人との関係.md
@@ -1,3 +1,23 @@
+## 関係性の段階
+
+人付き合いとか親交の段階としては、
+
+1. 話しかけても無視する: 関わるつもりもない
+2. 質問されたことに答える: 最低限の関心がある
+3. 相手から何度も質問してくる（話を振ってくる）: 興味がある
+4. プライベートな話題に乗ってくれる
+5. 何時間も話し続けられる
+6. 二人で遊びやデートに行ける
+7. スキンシップを受け入れる
+8. セックスを受け入れる
+
+くらいの段階がある。
+とりあえずパブリックな話題で話ができる程度なら社交レベル。同僚とかと暇つぶしに話すくらい。
+
+女性側は特に「順序を飛ばさない」ことを重視すると良い。飛ばす人はセックスしたいだけかも。
+
+## 関係性の要素
+
 - 呼び方
   - ニックネーム
 - どうやって相手を識別しているか
