--- a/shared/sex/dating/tips/恋人を選ぶ.md
+++ b/shared/sex/dating/tips/恋人を選ぶ.md
@@ -84,3 +84,7 @@ https://youtube.com/watch?v=SED4dF1kmZQ&si=YkAXIVfLuSENe9zv
 疲れて意識的な気遣いが難しくなるので、習慣的な気遣いを見る。
 
 いい男、いい女というのは、相手のパートナーであることに誇りを持てる人。いい会社も同じ。
+
+男性で年収600万円は30代で20%いないくらい。
+
+ステータスだけで評価するのは情がない。
