--- a/shared/care/tips/関心を示す.md
+++ b/shared/care/tips/関心を示す.md
@@ -56,6 +56,7 @@
 - こまめに連絡する
 - すぐに反応する
 - 自分から積極的に話しかける
+- 二人でゆっくり歩く
 
 ## Bad
 
@@ -171,3 +172,6 @@
 人と会う前に復習できるならしておく。自分のことをよく覚えている人は関心があると思う。
 
 Gaze、視線は必ず人の心を掴む。
+
+関心がある人と話しながら歩くと歩くのが遅くなる。
+ゆっくり歩くことで相手への関心を示す。
