--- a/shared/community/価値観の違い.md
+++ b/shared/community/価値観の違い.md
@@ -19,3 +19,6 @@ Win Win の関係の中でもさらにビジネスとコミュニティに分か
 不安を感じる要素が違いすぎると変に不安を与えてしまったりする。鈍すぎると。逆に鋭すぎる分には自分が不安を感じる。
 
 価値観が違うのは当たり前。
+
+「価値観は「すり合わせる」ものではなく「広げる」ものだ。」
+https://x.com/minatoku_genkai/status/2019275397234586040?s=12
