--- a/shared/respect/empathy/共感される.md
+++ b/shared/respect/empathy/共感される.md
@@ -10,3 +10,7 @@
 共感を得るというのは、相手を動かすということ。
 
 共感できることを言えば、共感できなくても共感される。
+
+緊張してたら相手にも伝わるので、「なんか緊張してる」って伝えるのも共感されやすい。
+
+共感されるためには、自分から感情を言葉にする。相手はそれをおうむ返しするだけでいい。
