--- a/shared/mood/vibe/ノリ.md
+++ b/shared/mood/vibe/ノリ.md
@@ -25,3 +25,8 @@
 ノリは別にどうでもよくて、ノリが悪い人に対して態度を悪くしてムードを悪くするのはクズ。
 
 ノリには重さ、軽さがある。ノリが軽いほど勢いに乗りやすい。普通はそこまで軽くない人が多いので、助走が必要。
+
+ノリがいい、と言われるのは、気さくさ、楽しさ。一緒にいて楽しいこと。
+
+ユーモアが大事。
+まず、楽しませようとすることから始める。滑っても、恥ずかしくても、慣れないといけない。
