--- a/shared/people/appearance/容姿.md
+++ b/shared/people/appearance/容姿.md
@@ -1,5 +1,10 @@
 # Appearance
 
+- 顔
+- スタイル
+  - 細身
+  - 高身長
+
 英語で言うと appearance が全般的な外見のことで、looks は生まれ持った顔などの見た目のこと。
 
 「容姿を褒めるのは性的に見ているからだ」という説があったけど、流石に被害妄想だと思う。
@@ -24,3 +29,5 @@
 - 脚を長く見せる
 
 スタイルはこの二つが大事。
+
+髪型で流行りのセンターパート、ウルフヘア、マッシュ、あたりは顔の輪郭を隠して小さく見せる効果が高いので長く愛されている。
