--- a/shared/sex/dating/tips/男性にモテたい.md
+++ b/shared/sex/dating/tips/男性にモテたい.md
@@ -1,3 +1,8 @@
+- 若い
+- かわいい
+- 健康
+- スタイルがいい
+
 男性の場合、女性がモテているかどうかではあまり見ない気がする。
 好みかどうか、若くて子供を産めるかどうか。
 なんなら Good Mum でなくても別にいいし。まぁ、結婚するなら家庭的で子育てができる人の方がいいかもしれないけど、セックスしても男側は最悪逃げられるから、女性ほど重視してないと思う。
