--- a/shared/trust/intimacy/清潔感.md
+++ b/shared/trust/intimacy/清潔感.md
@@ -1,4 +1,6 @@
-- 不健康
+## 清潔感がなくなっている要因
+
+- 不健康に感じる
   - 肌が乾燥している
     - 肌がテカっている
   - 毛穴が目立つ
@@ -10,6 +12,22 @@
   - 顔の部品が歪んでいる
     - 形が悪い（縦のバランスが悪い）
     - 左右対称になっていない（横のバランスが悪い）
+  - 臭い
+    - 口が臭い
+      - 口が乾燥している
+      - 歯磨きが足りない
+      - 内臓から匂っている
+    - 体が臭い
+      - わきが
+    - 髪が臭い
+      - 生乾きで放置した
+    - 服が臭い
+      - 生乾きで放置した
+  - 病気っぽい
+    - 赤ら顔でぼーっとしている
+    - 咳やくしゃみをしている
+
+## その他
 
 掃除と服装は清潔感を与える意味で似ている。衛生に関連する。
 
