--- a/shared/people/appearance/beauty/makeup/hair/ヘアカット.md
+++ b/shared/people/appearance/beauty/makeup/hair/ヘアカット.md
@@ -1,1 +1,4 @@
 - [すきバサミの使い方｜セルフカットで大活躍！基本的な切り方や前髪の作り方をご紹介 | Domani](https://domani.shogakukan.co.jp/476823)
+
+美容院の相場は4000円。(2026年)
+それより高いところは人気があって、それより低いところは人気がないと考えられる。
