--- a/shared/sex/dating/tips/恋人を選ぶ.md
+++ b/shared/sex/dating/tips/恋人を選ぶ.md
@@ -88,3 +88,5 @@ https://youtube.com/watch?v=SED4dF1kmZQ&si=YkAXIVfLuSENe9zv
 男性で年収600万円は30代で20%いないくらい。
 
 ステータスだけで評価するのは情がない。
+
+子どもを作って育てるなら稼ぎがあって欲しい。
