--- a/shared/people/appearance/beauty/cosmetics/香水.md
+++ b/shared/people/appearance/beauty/cosmetics/香水.md
@@ -4,8 +4,41 @@
 
 香水は匂いが強いので、練り香水
 
+## 香水の種類
+
+| 種類             | 持続時間 | 濃度 |
+| ---------------- | -------- | ---- |
+| パルファム       | 5        | 15   |
+| オードパルファム | 4        | 10   |
+| オードトワレ     | 3        | 5    |
+| オーデコロン     | 1        | 2    |
+
+パルファムは使い方を考えないと香りが強すぎるので注意。
+
+## 香りの系統
+
+- シトラス
+- アクアマリン
+- フゼア
+- フローラル
+- アンバー
+- ウッディ
+- フルーティ
+- グリーン
+- ムスク
+
 ## 万人受けする香り
 
-- バニラ
-- ジャスミン
 - ムスク
+- バニラ (アンバー系)
+- ジャスミン (フローラル系)
+
+## 香りの評価軸
+
+- フレッシュ(酸っぱい)/リッチ(甘い)
+- 若い/大人っぽい
+
+## その他
+
+- BODYSHOP ブラックムスク
+- BODYSHOP ホワイトムスク
