--- a/shared/lifestyle/fragrance/tips/香水をつける.md
+++ b/shared/lifestyle/fragrance/tips/香水をつける.md
@@ -9,3 +9,5 @@ https://x.com/esssssuuuuu/status/1692388991264587946?s=20
 香水をつけるときは、柔軟剤などの下地の匂いは無臭にする。
 
 香水は50mlで一年くらい使える。だいたい月に4mlが目安。
+
+液体の香水は匂いが強いので、練り香水の方が始めやすい。
