--- a/shared/lifestyle/fragrance/香水.md
+++ b/shared/lifestyle/fragrance/香水.md
@@ -2,8 +2,6 @@
 
 香料をアルコールで溶解した溶液。
 
-香水は匂いが強いので、練り香水
-
 ## 香水の種類
 
 | 種類             | 持続時間 | 濃度 |
@@ -14,18 +12,6 @@
 | オーデコロン     | 1        | 2    |
 
 パルファムは使い方を考えないと香りが強すぎるので注意。
-
-## 香りの系統
-
-- シトラス
-- アクアマリン
-- フゼア
-- フローラル
-- アンバー
-- ウッディ
-- フルーティ
-- グリーン
-- ムスク
 
 ## 万人受けする香り
 
@@ -38,7 +24,14 @@
 - フレッシュ(酸っぱい)/リッチ(甘い)
 - 若い/大人っぽい
 
+## 定番のメンズブランド
+
+- BODYSHOP
+  - ホワイトムスク
+  - ブラックムスク
+- SHIRO
+
 ## その他
 
-- BODYSHOP ブラックムスク
-- BODYSHOP ホワイトムスク
+香りが変化するものもある。
+トップノート、ミドルノート、ラストノート、の3段階がある。
