--- a/shared/people/人の印象.md
+++ b/shared/people/人の印象.md
@@ -1,5 +1,17 @@
 # 個人の印象
 
+## 一般
+
+- 性別
+  - 男性的
+  - 女性的
+  - 中性的
+- 年齢
+  - 若い
+  - 大人っぽい
+- 儀礼
+  - フォーマル
+  - カジュアル
 - 好き / 嫌い
 - 強い / 弱い
 - 美しい / 怪しい
@@ -55,8 +67,6 @@
 - さっぱりしている
 - 愛が深い
 - 癒される
-- フォーマル / カジュアル
-- 男性的 / 女性的
 - 見た目が良い
 - 声が良い
 - 匂いが良い
