--- a/shared/singing/tips/歌を褒める.md
+++ b/shared/singing/tips/歌を褒める.md
@@ -1,2 +1,24 @@
+- 誰が歌っていたかを覚える
+- 曲選びを褒める
+  - アーティストを覚える
+  - タイトルを覚える
+  - 気になった歌詞を覚える
+  - 「選曲がいいね」
+  - 「この曲好き」
+  - 「この曲懐かしい」
+- どう歌っていたかを褒める
+  - 歌に対する姿勢を褒める
+    - 「楽しそうに歌ってた」
+    - 「ノリノリだった」
+    - 「自分も歌いたくなった」
+  - うまく歌えたところを褒める
+    - 「声に合ってた」
+    - 「高音が綺麗だった」
+    - 「サビの盛り上げ方が良かった」
+    - 「声が出てた」
+    - 「このフレーズで一旦落として一気に上げたのが熱かった」
+- 意外性を指摘する
+  - 「こういう曲歌うんだね」
+
 歌をリクエストしてくれるのは嬉しい。
 自分でも他の人の好きな歌を見つけて、「また聴きたい」と言ってみよう。
