--- a/shared/people/appearance/outfit/装いの系統.md
+++ b/shared/people/appearance/outfit/装いの系統.md
@@ -4,19 +4,6 @@
 - 女性的 (ウィメンズ)
 - 中性的
 
-##
-
-- タイト: 細い
-  - 手足を長く見せる
-- ルーズ: 緩い、しわ
-  - 裾が余る
-  - シワがよる
-
-##
-
-- ハード: 男性的、直線的、攻撃的
-- ソフト: 女性的、曲線的
-
 ## 印象による違い
 
 - フォーマル: 儀礼的で上品
@@ -36,6 +23,19 @@
 ブランドやデザイナーの思想が強く反映されている。
 
 基本的にほとんどのファッションはストリート。
+
+## タイト・ルーズ
+
+- タイト: 細い
+  - 手足を長く見せる
+- ルーズ: 緩い、しわ
+  - 裾が余る
+  - シワがよる
+
+## ハード・ソフト
+
+- ハード: 男性的、直線的、攻撃的
+- ソフト: 女性的、曲線的
 
 ## 精神性による違い
 
