--- a/shared/singing/tips/歌を褒める.md
+++ b/shared/singing/tips/歌を褒める.md
@@ -11,12 +11,22 @@
     - 「楽しそうに歌ってた」
     - 「ノリノリだった」
     - 「自分も歌いたくなった」
+    - 「感情がこもってた」
   - うまく歌えたところを褒める
-    - 「声に合ってた」
     - 「高音が綺麗だった」
+    - 「低音が渋かった」
     - 「サビの盛り上げ方が良かった」
-    - 「声が出てた」
+    - 「迫力がある」
+    - 「透明感があって癒された」
     - 「このフレーズで一旦落として一気に上げたのが熱かった」
+    - 「リズム感が良かった」
+    - 「ビブラートが綺麗だった」
+    - 「抑揚の付け方がうまい」
+    - 「難しい曲なのにうまく歌えてた」
+  - 曲との相性を褒める
+    - 「声に合ってる」
+    - 「バラードが似合ってる」
+    - 「アップテンポな曲が似合ってる」
 - 意外性を指摘する
   - 「こういう曲歌うんだね」
 
