--- a/shared/people/性格.md
+++ b/shared/people/性格.md
@@ -23,3 +23,12 @@
 性格は選択の傾向。
 
 性格がいいとされる人は、まず周りへの関心がある。無関心な人はわざわざ他人のために動いたりしないので性格がいいとは見られない。気遣いが全くないと性格が悪いとすら言える。
+
+性格が悪いパターンの典型:
+
+- マキャベリアニズム: 目的が手段を正当化する
+- サイコパシー: 恐怖や苦痛に対して鈍い
+- ナルシシズム: 自己中心的、ポジティブな自己像、自尊心が低い
+- サディズム: 他人に苦痛を与えたがる
+
+鈍感、自己本位、他人の不幸を喜ぶ。共感性の欠如。
