--- a/shared/sex/dating/tips/女性にモテたい.md
+++ b/shared/sex/dating/tips/女性にモテたい.md
@@ -47,3 +47,5 @@ https://x.com/prada_46/status/1811005372855108064
 まぁ、男が女に負けるわけないので、男で女に怯えてるように見える人がいたら単に襲い掛かられたときに殴りたくないからなんだけど。サル山ではサルと目を合わせないのが礼儀であり自己防衛。
 
 別に付き合っている人がいなくても結婚指輪や婚約指輪をはめるとか。
+
+女性は見下すくらいでちょうどいい。怯えを見せるとオスとして見られない。
