--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -404,3 +404,10 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 直接的に拒否する（否定する）よりも、肯定的に受け入れつつ条件をつける方が関係性を保ちやすいし、周囲も笑える。
 
 関係性を明らかにするツールでもある。
+
+ユーモアは精神性でもある。
+
+人と違った目線で物事を見る。
+物事の意外なつながり、曖昧なもの、が大事。
+
+おかしさというのは、ある種の理不尽でもある。
