--- a/shared/sex/tips/男女の違い.md
+++ b/shared/sex/tips/男女の違い.md
@@ -52,3 +52,6 @@ https://x.com/karasu_pua/status/1937868155831152821?s=12
 https://x.com/vismoglie/status/2016658222862540809?s=46
 
 男は抱きたい女と家族になりたい女が違って当たり前なんだけど、女はあんまりそういう傾向がない印象。抱かれたい男と家族になりたがる。
+
+「自分も相手の趣味に付き合うから、趣味に付き合ってほしい」って感覚、男にはない。
+趣味は趣味でまた別の友達を作る。誰かをわざわざ付き合わせることは少ない。
