--- a/shared/execution/delegation/委譲.md
+++ b/shared/execution/delegation/委譲.md
@@ -1,4 +1,50 @@
-# 仕事を任せる
+# Delegation
+
+## 前提
+
+- 委譲しても、責任は自分にある
+  - 出力の最終的な質は自分が担保しないといけない
+  - 止まっていたら進めないといけない
+
+## 委譲のコツ
+
+- 期待を明確にする
+  - なぜ達成したいのか（コンテキスト・背景）
+  - 何を達成したいのか（ゴール・目的）
+- 対話的に進める
+  - 出力をレビューして、フィードバックする
+- 処理を任せる相手に合わせる
+  - 処理を分割する
+    - 相手の扱える規模まで処理を分割する
+    - 自分の確認しやすい規模まで処理を分割する
+  - 相手の言葉で伝える
+- サポートする
+  - 障害を排除する
+  - 知らないことを教える
+
+## その他
+
+実行を誰かに任せること。
+
+特に権利や権限を渡すこと。
+
+権限を渡しても、責任は渡せない。
+
+良い委譲先の要素:
+
+- 背景や文脈を理解する
+- 独自に学習する
+- わからないことがあったら質問してくる
+- できないことがあったら相談してくる
+- 言ったことを覚えている
+- 創造的な提案をしてくる
+- 出力が早い
+
+質問してこない相手には、先回りして情報を与えないといけない。
+
+言ったことを覚えてない相手には、重要な情報を毎回伝える。ドキュメントなどにテンプレートをまとめておくのも良い。特にAIはチャットが変わるたびに改めて伝えないといけない。
+
+委譲先の良いとこを潰してはいけない。
 
 entrust, delegate.
 
@@ -78,17 +124,6 @@ https://zenn.dev/neinc_tech/articles/kengen-ijo-dozo
 通常は判断できる人がそのまま作業する方が手っ取り早い。
 ただ、作業が多くなるほど複数人に任せた方がいい。
 
-仕事を頼むときに絶対守ること
-https://x.com/ysk_motoyama/status/1814496851703615906
-
-1. 頼み事を軽く扱わないこと
-2. 依頼の目的・背景を伝えること
-3. 納期を伝えること
-4. 「読んですぐ手が動くレベル」で具体的に伝えること
-5. 「なぜ他ではなくあなたにお願いするのか」を書く
-6. 相手の進捗を把握し、期限まで残り30%のタイミングでリマインドする
-7. お礼と成果をきちんと伝える
-
 普通は言われたこともできないことが多い。
 指示が足りないこともあるし、能力が足りないこともある。
 仕事を任せるには工夫が必要だ。
@@ -114,3 +149,20 @@ https://x.com/ysk_motoyama/status/1814496851703615906
 仕事を誰かに任せても責任がなくなるわけではない。手を借りても頭は変わらない。
 
 AIや素人を使うのが苦手なのは、品質を担保するのが苦手なのかも。
+
+マネジメントやリーダーシップにおいても重要なスキル。
+
+「委譲は、フォローアップなしでは放棄である」
+
+「フォローアップ」と、できない部分を代わりにやる「フォロー」は違う。
+相手ができるようになるまで見守ったり育てたりすること。
+
+仕事を任せた部下や機械が処理を進められなくなっているのはコンピューターがエラーを吐いて止まっているのと同じ。ただ、エラーを吐くとは限らない。無限ループとかで処理が進んでなくて検知しづらいとか、何も相談してこないとか、自分から確認しに行かないと見えにくい場合もある。
+
+プログラミングはコンピュータに実行を任せているので常に委譲。
+
+あまりに小さく分割しすぎると確認が面倒。
+
+逆に、委譲先をまとめてチームにして、より大きな処理を投げられるようにすることもできる。
+
+失敗から学ばせる前に適切な教育とモニタリングが必要。
