--- a/shared/execution/delegation/目的を伝える.md
+++ b/shared/execution/delegation/目的を伝える.md
@@ -1,3 +1,17 @@
+- ゴール（何を得たいか）
+  - 期待する出力
+- 期待値
+  - どれくらい欲しいか
+  - どれくらいの確率で成功して欲しいか
+- トレードオフ
+  - パフォーマンスか、セキュリティか
+  - 長く使うか、早く作るか
+  - など
+- 実際の入力
+  - 例
+  - 形式
+- 参考資料
+
 目的がわかっていれば、指示された方法がうまくいかなくても別の方法で目的を達するかどうか自分で判断できる。
 
 指示に目的を添えるのはモチベーションの問題もあるが、コミュニケーションの問題もある。
