--- a/shared/technology/機械.md
+++ b/shared/technology/機械.md
@@ -1,4 +1,13 @@
-# Machine
+# 機械
+
+人間も機械も単に分担の先、team や organization として扱えばいい。
+
+いきなり機械化しようとしない。
+まずは人力だったらどうするかを考える。工業よりも工芸から始める。
+
+システムの一種。
+
+メカニカルな部分とテクニカルな部分。
 
 > 機械、器械とは、広義には、ある力が有用な働きをなし、あるいは他のエネルギーの形態に変化する力の伝達を行うような装置の総称。
 > 通常の用語では機械（machine）は一般に簡単な構造を有する器具（implements）または道具（tools）とは区別され、2つ以上の抵抗物を組み合わせて互いに相関的運動を行う工作物をいう。
@@ -12,3 +21,6 @@ https://ja.wikipedia.org/wiki/%E6%A9%9F%E6%A2%B0
 機械式というと、歯車などの部品の組み合わせだけで、電子制御を伴わない作り。トランジスタとか使って電気信号のやり取りだけで仕掛けを作るのは電子式。
 スイッチだけ電子式だけど、仕掛けの大部分は機械式ということもよくある。車とか。
 機械式は部品が動くので、摩擦というか、擦り減る、摩耗するのが問題。コンピュータでもファンが機械だったりする。水冷ならほとんど摩耗する部品はない。
+
+- Work
+- Technology
