--- a/shared/business/ビジネス.md
+++ b/shared/business/ビジネス.md
@@ -820,3 +820,6 @@ https://journals.plos.org/complexsystems/article?id=10.1371/journal.pcsy.0000001
 ビジネスの基本は「自分でやる」ことと、「売れるレベルまで品質を高める」こと。後者が難しい。
 
 仕事ってやりたいことがなくてもやるべきことをやってるだけでなんとかなる。
+
+「部下の授業料を顧客に払わせるな」
+部下が失敗して学ぶということは、部下の授業料を顧客が支払っているということ。
