--- a/shared/collaboration/organization/指示待ち.md
+++ b/shared/collaboration/organization/指示待ち.md
@@ -1,2 +1,8 @@
 部下が指示待ちになるのは、上司が介入しすぎている。
 大きな方針と情報は渡して、手や口は出さない。
+
+- 意見を出せば「根拠は？」と潰される
+- 挑戦すれば「余計なことはするな」と止められる
+
+「指示待ちは性格ではなく、組織の設計ミス」
+https://x.com/ally_of_earth/status/2020304437743644964?s=20
