--- a/shared/execution/delegation/レビュー.md
+++ b/shared/execution/delegation/レビュー.md
@@ -8,3 +8,6 @@
 
 レビューのタイミングも相手によって違う。
 TRMの高い相手ならたまにでもいいし、低かったらこまめに確認して実行が止まっていたら修正して再実行する。
+
+最終レビューで何か問題があるとわかるのでは遅い。
+最終レビューで「Good」以外のフィードバックがあったら自分が悪い。
