--- a/shared/management/マネージャー.md
+++ b/shared/management/マネージャー.md
@@ -16,3 +16,6 @@
 
 マネージャーになれる人は、マネージャーでなくてもマネージャーとしての仕事をしている人。
 周りの士気を高めたり、周りとコミュニケーションを取ったり、周りのために資料を作ったりする人。
+
+マネージャーは実行者だ。
+実行を委譲することもできるが、責任は自分にある。
