--- a/shared/management/マネージャーの仕事.md
+++ b/shared/management/マネージャーの仕事.md
@@ -36,3 +36,6 @@ https://x.com/yuuuu19860221/status/1815242336831705469
 マネージャーには権限と予算を与えないといけない。部下もマネージャーに集めさせる。一人でやってもいいし、部下と一緒にやってもいい、というのが理想。人員管理という作業ではなく、プロジェクトを任せる。
 
 マネージャーの仕事は戦略とかビジョンとかじゃなくて、なんとかすること。ただ、大きな問題を扱うためには仲間が必要。戦略やビジョンを明確にして部下に助けてもらう必要がある。一人でなんとかなるなら要らない。
+
+部下を持つマネージャーのアウトプットは、自分のチームとそれに影響を与えるチームのアウトプットで決まる。
+数多くの重要な活動の中から、他よりはるかに価値のある（レバレッジの大きい）1-3つを選んでそれに集中するべき。
