--- a/shared/trust/intimacy/誰かと親しくなる.md
+++ b/shared/trust/intimacy/誰かと親しくなる.md
@@ -294,3 +294,5 @@ https://www.total-marriage.com/column/1644/
 好かれてもいないのに親しく接してもうっとうしいだけ。
 
 友人を目指して親しくなるのか、恋人を目指して親しくなるのか、はっきりと決めて近づき方を変える。
+
+スモールトークからディープトークに移行するのが上手いと有利。
