--- a/shared/achievement/task/タスク.md
+++ b/shared/achievement/task/タスク.md
@@ -1,3 +1,5 @@
+# Task
+
 チケットが完了した後に新たな要求があっても、チケットは再利用せずに新しく作る。
 
 タスクでも期限があるとは限らない。
@@ -45,3 +47,8 @@ https://qiita.com/ogix/items/fc493a0775900e02fbca?utm_source=Qiitaニュース&u
 タスクは作業、executionの文脈でもいいかも。
 
 課題や問題をもとに具体的なタスクや包括的なプロジェクトを作る。
+
+タスクは作業や処理の単位で、ジョブは仕事の単位。
+
+タスクは具体的で、着手と完了がある。期限がある場合が多い。
+ジョブはまとまりがあって、終わりがあるとは限らない。業務。職務。
