--- a/shared/engagement/パートナー.md
+++ b/shared/engagement/パートナー.md
@@ -49,3 +49,5 @@
 同じ目的のために役割分担ができていればいい。経営者と労働者とか。
 
 パートナーは苦労も共有する。
+
+パートナーは助け合うもので、一方が助けるだけならもう一方は要らない。パートナーはあくまでも利害関係の一つで、相互に利がないと続ける意味がない。特に恋人の場合、一方が子育ての役に立たないなら切るべき。
