--- a/shared/people/appearance/シルエット.md
+++ b/shared/people/appearance/シルエット.md
@@ -77,3 +77,11 @@ https://x.com/_muu_666/status/2019370165691981871?s=46
 
 Y型、O型、A型はハイウエストや太めのボトムスで下半身を強調するとバランスがいい。細いボトムスはアンバランス。
 I型は太めのボトムスでメリハリをつける。フレアは直線的なシルエットが強くなりすぎる。
+
+骨格の違い:
+
+骨格をウェーブ、ナチュラル、ストレートに分ける場合がある。
+
+- ナチュラル: 標準的
+- ウェーブ: 胸や尻の位置が低く、前後の厚みがない
+- ストレート: 胸や尻の位置が高く、前後の厚みがある
