--- a/shared/sex/恋人.md
+++ b/shared/sex/恋人.md
@@ -2,6 +2,8 @@
 
 一緒に子供を作って育てるための関係。
 
+恋人はパートナーであるべき。
+
 単にセックスするだけでは恋人とは言えない。
 仕事でセックスすることもあるし、性欲を発散するためだけにセックスすることもある。
 
@@ -157,3 +159,6 @@
 男性は女性よりも相手を恋人として見る期間が少ないバグがある。その間に家族や友人としての地位を築かないと捨てられる。
 
 恋愛や結婚では、最初に一番厳しいことを話しておく。仲がいいうちに準備する。
+
+女性は妊娠がある以上、仕事を続けたりキャリアを積むのが難しい。
+女性が仕事を続ければ収入が増えて生活が楽になるので、パートナーであればサポートするべき。
