--- a/shared/text/writing/書きやすさよりも読みやすさ.md
+++ b/shared/text/writing/書きやすさよりも読みやすさ.md
@@ -1,2 +1,5 @@
 書きやすさよりも読みやすさを重視する。
 ただ、あまりにも書きにくいと手間が逆転してしまうこともある。
+
+読みやすさには可読性だけじゃなく、そもそもの視認性の問題もある。
+視認性が悪いと読むとかじゃない。例えば白地に薄い黄色の文字とかはもう見えないし、黒地に白文字なんかは眩しくて疲れる。
