--- a/shared/lifestyle/clothing/examples/鞄.md
+++ b/shared/lifestyle/clothing/examples/鞄.md
@@ -73,3 +73,5 @@
 - https://sot-web.com/column/leatherbags_kind/
 - https://mens.tasclap.jp/a827
 - https://shinshimono.jp/shopbrand/ct326/
+
+身につけるカバンは基本的にあまり目立たないほうがいい。柄と同じ。
