--- a/shared/people/appearance/outfit/装い.md
+++ b/shared/people/appearance/outfit/装い.md
@@ -15,3 +15,8 @@
   - 大人しい: フォーマル
 - ソフト: 曲線的
   - 若々しい: カジュアル
+
+アイテムごとに、属性の組み合わせにそもそも無理がある場合もある。
+たとえばスーツに穴が空いててもカジュアル以前の問題。でもジーンズに穴が空いていてもそこまで違和感がない。
+
+フォーマルやカジュアルに振り切った方がいい場合もある。
