--- a/shared/people/appearance/tips/身なりの印象を変える.md
+++ b/shared/people/appearance/tips/身なりの印象を変える.md
@@ -1,15 +1,32 @@
 ## フォーマル・カジュアル
 
-- タイトな方がフォーマル
-- 機能的な方がカジュアル
+- フォーマル
+  - 制服
+    - スーツ
+    - ドレス
+    - 学生服
+  - タイト
+  - タックイン
+  - 光沢や艶がある
+  - 髪に艶がある
+- カジュアル
+  - チープな素材
+    - ビニールやナイロン
+  - 機能的
+    - アウトドア
+    - スポーティ
+    - 作業着
+  - 汚れている
+  - 傷んでいる
+  - シワがある
+  - 髪を染めている
+  - 髪がボサボサ
 
 文化によっても違う。
 
 アウトドア、インドアの区分もある。
 インドアの極地は部屋着。
 フォーマルはあまりアウトドアにはなりにくい。
-
-視覚的な刺激の強さ、ハード、ソフト、の感覚もある。
 
 フォーマル、カジュアルはグラデーションがあって、フォーマルめのほうが誰にでも合いやすい。
 
@@ -47,31 +64,44 @@
 
 強面なら、装いにはソフトな要素を混ぜてバランスを取る。
 
-- 明るいトーンはソフトになる
-- 暗いトーンはハードになる
-- 角ばっているとハードになる
-  - オールバックや角刈りはハードになる
-  - パーマにするとソフトになる
-- 眉を直線的にするとハードになる
-- 毛素材を使うとソフトになる
-- 角のないメガネをかけるとソフトになる
-- 濃い色のフレームはハードになる
-- 笑うとソフトになる
-- VネックよりもUネックのほうがソフトになる
+- ソフト
+  - 明るいトーンはソフトになる
+    - ネイビー（黒よりは）
+    - チャコールグレー
+    - ベージュ
+    - ホワイト
+  - 曲線的
+    - 毛素材を使うとソフトになる
+    - パーマにするとソフトになる
+    - 角のないメガネをかけるとソフトになる
+    - VネックよりもUネックのほうがソフトになる
+  - 笑うとソフトになる
+- ハード
+  - 暗いトーンはハードになる
+  - 直線的
+    - 角ばっているとハードになる
+      - オールバックや角刈りはハードになる
+    - 眉を直線的にするとハードになる
+  - 濃い色のフレームはハードになる
 
-ソフトな印象の色:
-
-- ネイビー
-- チャコールグレー
-- ベージュ
-- ホワイト
+視覚的な刺激の強さ、ハード、ソフト、の感覚もある。
 
 ## タイト・ルーズ
 
-- タックインした方がタイト
+- タイト
+  - タックイン
 - ボタンを止めた方がタイト
 
-## 機能的・装飾的
+## 機能的
 
-- 色が多いほど装飾的
-- 形が複雑になるほど装飾的
+- 実用的な用途が決まっている
+  - 運動
+    - スポーツ
+    - 登山
+  - 労働
+    - 工場
+
+## 装飾的
+
+- 色が多い、派手
+- 形が複雑
