--- a/shared/lifestyle/clothing/examples/鞄.md
+++ b/shared/lifestyle/clothing/examples/鞄.md
@@ -19,41 +19,47 @@
 
 ## 鞄の種類
 
-- クラッチバッグ（セカンドバッグ）
-- バッグインバッグ
-- ポシェット（サコッシュ）
-- ボディーバッグ
-  - ウエストポーチ
-- ハンドバッグ
-- ショルダーバッグ（ワンショルダー）
-  - メッセンジャーバッグ
-  - トートバッグ
-  - ボストンバッグ
-    - ドラムバッグ
-- ビジネスバッグ
-  - ブリーフケース
-  - アタッシュケース
-  - ポートフォリオ
-  - ダレスバッグ
-- リュックサック
-  - ランドセル
-  - リセバッグ
-  - キスリング
-  - フレームザック
-  - デイパック
-  - ボンサック（ワンショルダーリュック）
-  - ナップサック
-- スーツケース
-  - ガーメントケース
-- キャリーバッグ
-- 巾着袋
+- 掴む
+  - ハンドバッグ
+    - 巾着袋
+  - ビジネスバッグ
+    - ブリーフケース
+    - アタッシュケース
+    - ポートフォリオ
+    - ダレスバッグ
+  - スーツケース
+    - ガーメントケース
+- 身につける
+  - 抱える
+    - クラッチバッグ（セカンドバッグ）
+  - 背負う
+    - リュックサック
+      - ランドセル
+      - リセバッグ
+      - キスリング
+      - フレームザック
+      - デイパック
+      - ボンサック（ワンショルダーリュック）
+      - ナップサック
+  - 肩にかける
+    - ボディーバッグ
+      - ウエストポーチ
+    - ショルダーバッグ（ワンショルダー）
+      - ポシェット（サコッシュ）
+      - メッセンジャーバッグ
+      - トートバッグ
+      - ボストンバッグ
+        - ドラムバッグ
+- その他
+  - バッグインバッグ
+  - キャリーバッグ
 
 ## 長持ちするバッグ
 
 素材
 
 - 本革
--
+- 上質なキャンバス生地
 
 ## その他
 
@@ -75,3 +81,7 @@
 - https://shinshimono.jp/shopbrand/ct326/
 
 身につけるカバンは基本的にあまり目立たないほうがいい。柄と同じ。
+
+手に持つカバンと背負ったりして体に身につけるカバンは見た目の意図が違う。
+手に持つものは手の延長。手先は特に目立つところ。
+身につけるものは柄に近い。
